fix text wrapping of links
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@12338 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_activity.scss
+++ b/src/main/resources/scss/_activity.scss
@@ -157,6 +157,8 @@
 				font-size: 14px;
 				font-weight: normal;
 				color: $primary-grey;
+				word-break: break-all;
+				word-wrap: break-word;
 				background: url(../images/ldquo.png) 15px 15px no-repeat;
 
 				&::after{
